--- a/playlist/src/index.css
+++ b/playlist/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+td{
+  border: 1px solid #ddd;
+  padding: 8px;
+  width: 200px;
+}
