--- a/playlist/src/index.css
+++ b/playlist/src/index.css
@@ -1,20 +1,67 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  background-color: #f72585;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: yellow;
+  border: 1px solid yellow;
+  box-shadow: 0 0 2px yellow;
+  margin: 20px;
 }
 
+ul {
+  list-style-type: none;
+  font-size: x-large;
+  border: 1px solid black;
+  box-shadow: 0 0 5px black;
+  padding: 20px;
+}
 
-td{
+td {
   border: 1px solid #ddd;
   padding: 8px;
   width: 200px;
+}
+
+input, select {
+  width: 200px;
+  margin: 20px;
+  padding: 10px;
+  background-color: #ef476f;
+  color: black;
+}
+
+.header {
+  background-color: #f72585;
+  padding: 50px;
+}
+
+.footer {
+  background-color: #f72585;
+  font-size: small;
+}
+
+#songsorting {
+  width: 100%;
+  background-color: #560bad;
+  color: #edf6f9;
+}
+
+#songlist{
+  width: 100%;
+  background-color: #feeafa;
+}
+
+#deletebutton, #addsongbutton {
+  background-color: #560bad;
+  border: none;
+  color: white;
+  margin-top: 40px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0 0 3px black;
 }
